package src;
public class BitStuffer {
    static String stuff(String bitstring) {return null;}
    static String destuff(String bitstring) {return null;}
}
