package src;
public class CLI {
    public void startREPL() {}
}
