package src;
public class FrameFileReader {
    public boolean openFile(String filename, String flag) {
        return false;
    }

    public void closeFile() {}
    
    public CharFrame getNextFrame() {
        return null;
    }
}
