package src;
public class Receiver {
    private int port;

    public void listen(int port) {}

    private void sendReceipt(String type) {}
}
