package src;
public class Sender {
    public void send (String name, int port, String filename) {

    }

    private void sendFrame(String name, int port, CharFrame frame) {}
}
