package src;
public class Test {
    public void runTests() {}
}
